[package]
name = "bcrypt-no-getrandom"
version = "0.16.0"
authors = ["Vincent Prouillet <hello@prouilletvincent.com>", "Skyler Calaman"]
license = "MIT"
readme = "README.md"
description = "Easily hash and verify passwords using bcrypt without getrandom or zeroize, providing near-complete functionality without alloc or std"
homepage = "https://github.com/Blckbrry-Pi/rust-bcrypt-no-random"
repository = "https://github.com/Blckbrry-Pi/rust-bcrypt-no-random"
keywords = ["bcrypt", "password", "web", "hash"]
edition = "2021"
include = ["src/**/*", "LICENSE", "README.md"]

[features]
default = ["std"]
std = ["base64/std"]
alloc = []

[dependencies]
blowfish = { version = "0.9", features = ["bcrypt"] }
base64 = { version = "0.22", default-features = false }
subtle = { version = "2.6", default-features = false }


[badges]
maintenance = { status = "as-is" }
